--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+    <head>
+        {{> headTags }}
+    </head>
+    <body>
+        {{> header }}
+        {{{ body }}}
+        {{> footer }}
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+    </body>
 </html>
