--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,30 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="pageTitle text-center py-5">
+    <h1><strong>{{title}}</strong></h1>
+</div>
+
+<div id="index">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card border-0">
+                <div class="card-body">
+                    <img src="img/mainPictureSmall.jpg" alt="Vincent Sordo" class="img-fluid rounded-circle">
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card border-0">
+                <div class="card-body">
+                    <h3>Who I Am</h3>
+                    <ul>
+                        <li>I am a {{age}} year old software engineer living in Santa Cruz.</li>
+                        <li>I enjoy meditation, yoga, cold immersions, running, cycling, riding my motorcycle, and creating new things.</li>
+                    </ul>
+                    <h3>Professional Experience</h3>
+                    <ul>
+                        <li>7+ years experience in software development with a background in scalable web technologies, payment processing, and distributed systems.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
