--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,47 @@
+html, body {
+  height: 100%; }
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
   color: #00B7FF; }
+
+.navbar {
+  box-shadow: 2px 2px 5px #3292a6;
+  opacity: 0.9;
+  background: #fff; }
+  .navbar .nav-item {
+    font-size: 1.4rem;
+    padding-right: 20px; }
+
+#mainSection {
+  margin-bottom: 30px; }
+
+#footer {
+  background: #ffffff;
+  font-size: 14px; }
+  #footer a {
+    text-decoration: none;
+    color: #3292a6;
+    font-size: 20px; }
+  #footer a:hover {
+    text-decoration: none;
+    color: #26707f; }
+  #footer ul {
+    list-style-type: none; }
+  #footer .list-inline-item {
+    margin-left: 30px;
+    margin-right: 30px; }
+
+#contactSubmitButton {
+  background: #3292a6;
+  color: #ffffff; }
+  #contactSubmitButton hover {
+    background: #26707f; }
+
+.formResponse {
+  opacity: 0.9;
+  margin: 20px; }
 
 /*# sourceMappingURL=style.css.map */
