--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,9 +1,74 @@
+$primary-color:#3292a6;
+$primary-color-hover: darken($primary-color, 10%);
+
+html, body {
+  height: 100%;
+}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
 }
+
+.navbar{
+  box-shadow:2px 2px 5px $primary-color;
+  opacity:0.9;
+  background:#fff;
+
+  .nav-item{
+    font-size:1.4rem;
+    padding-right:20px;
+  }
+}
+
+.pageTitle {
+
+}
+
+#mainSection {
+  margin-bottom: 30px;
+}
+
+#footer {
+  background: #ffffff;
+  font-size: 14px;
+
+  a {
+    text-decoration: none;
+    color: $primary-color;
+    font-size: 20px;
+  }
+
+  a:hover {
+    text-decoration: none;
+    color: $primary-color-hover;
+  }
+
+  ul {
+    list-style-type: none;
+  }
+
+  .list-inline-item {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+}
+
+#contactSubmitButton {
+  background: $primary-color;
+  color: #ffffff;
+
+  hover {
+    background: $primary-color-hover;
+  }
+}
+
+.formResponse {
+  opacity: 0.9;
+  margin: 20px;
+}
+
 
