--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,9 +5,13 @@
     </head>
     <body>
         {{> header }}
-        {{{ body }}}
+
+        <section id="mainSection" class="px-4">
+            {{{ body }}}
+        </section>
+
         {{> footer }}
-        <script src="/js/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="/js/bootstrap.min.js"></script>
     </body>
 </html>
