--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,16 @@
-<footer class="footer">
+<div id="footer" class="py-5 text-center">
+    <ul class="list-inline">
+        <li class="list-inline-item">
+            <a href="https://github.com/vincentsordo" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li class="list-inline-item">
+            <a href="https://www.facebook.com/vincent.sordo" target="_blank">
+                <i class="fab fa-facebook"></i>
+            </a>
+        </li>
+    </ul>
     <p>Copyright &copy {{currentYear}}</p>
-</footer>
+</div>
+
