--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-light py-4">
     <div class="container">
-        <a href="index.html" class="navbar-brand">vincentsordo</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="navNavbar" class="collapse navbar-collapse">
+        <a href="/" class="navbar-brand">
+            <h3 class="d-inline align-middle">Vincent Sordo</h3>
+        </a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a href="/index" class="nav-link">Home</a>
+                <li class="nav-item">
+                    <a href="/" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/users" class="nav-link">Users</a>
+                    <a href="/about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="/contact" class="nav-link">Contact</a>
