--- a/views/blog/listing.hbs
+++ b/views/blog/listing.hbs
@@ -3,15 +3,17 @@
 </div>
 
 <div class="container">
-    <h2>Blog Entries</h2>
     <div class="row">
-        <div class="col-lg-12">
-            <ul id="blogList"></ul>
-        </div>
+        <div class="col-lg-2"></div>
+        <div id="blogPosts" class="col-lg-8"></div>
+        <div class="col-lg-2"></div>
     </div>
 </div>
 
 <script type="text/javascript">
     // on load load recent blog posts
-    window.onload = populateBlogListing();
+    var pathParts = window.location.pathname.split("/");
+    var numberOfBlogPosts = pathParts[pathParts.length-1] || pathParts[pathParts.length-2];
+    window.onload = populateBlogListing(numberOfBlogPosts);
+
 </script>
