--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,7 +16,7 @@
                 <div class="card-body">
                     <h3>Who I Am</h3>
                     <ul>
-                        <li>I am a {{age}} year old software engineer living in Santa Cruz.</li>
+                        <li>I am a {{age}} year-old software engineer living in Santa Cruz.</li>
                         <li>I enjoy meditation, yoga, cold immersions, running, cycling, riding my motorcycle, and creating new things.</li>
                     </ul>
                     <h3>Professional Experience</h3>
