--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="/js/ajaxCalls.js"></script>
+        <script src="/js/main.js"></script>
 
         <section id="mainSection" class="mx-5">
             {{{ body }}}
