--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,7 +13,7 @@
                     <a href="/about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/contact" class="nav-link">Contact</a>
+                    <a href="/blog/listing" class="nav-link">Blog</a>
                 </li>
             </ul>
         </div>
